--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "body-parser": "^1.17.2",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.15.0-beta.2",
@@ -35,7 +36,10 @@
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.15.0-beta.2",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "express": "^4.15.4",
+    "glob": "^4.5.3",
+    "loader.js": "^4.2.3",
+    "morgan": "^1.8.2"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
